// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[` 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_detected": false,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "old_id": null,
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "HEALTH",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 3`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_detected": false,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "old_id": null,
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 4`] = `
{
  "error": ""phone" must be a string",
}
`;

exports[`accepting the dispute contribution invitation 1`] = `
{
  "created_at": Any<String>,
  "dispute_id": Any<String>,
  "id": Any<String>,
  "status": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`declining the dispute contribution invitation 1`] = `
{
  "created_at": Any<String>,
  "dispute_id": Any<String>,
  "id": Any<String>,
  "status": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`get a dispute 1`] = `
{
  "claimant": Any<Object>,
  "code": "DIS-1",
  "created_at": Any<String>,
  "direction": Any<String>,
  "events": Any<Array>,
  "id": Any<String>,
  "jury": {
    "members": 0,
    "voted": 0,
  },
  "respondent": Any<Object>,
  "state": Any<String>,
  "title": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`get all disputes as climant 1`] = `
{
  "items": [
    {
      "claimant": Any<Object>,
      "code": "DIS-1",
      "created_at": Any<String>,
      "direction": Any<String>,
      "events": Any<Array>,
      "id": Any<String>,
      "jury": {
        "members": 0,
        "voted": 0,
      },
      "respondent": Any<Object>,
      "state": Any<String>,
      "title": Any<String>,
      "updated_at": Any<String>,
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 1,
}
`;

exports[`getting all of the dispute contribution invitations 1`] = `
{
  "items": [
    {
      "created_at": Any<String>,
      "dispute_id": Any<String>,
      "id": Any<String>,
      "status": Any<String>,
      "updated_at": Any<String>,
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 1,
}
`;

exports[`getting one of the dispute contribution invitations 1`] = `
{
  "created_at": Any<String>,
  "dispute_id": Any<String>,
  "id": Any<String>,
  "status": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`issue a dispute 1`] = `
{
  "claimant": Any<Object>,
  "code": "DIS-1",
  "created_at": Any<String>,
  "direction": Any<String>,
  "events": Any<Array>,
  "id": Any<String>,
  "jury": {
    "members": 0,
    "voted": 0,
  },
  "respondent": Any<Object>,
  "state": Any<String>,
  "title": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`put message on a dispute 1`] = `
{
  "claimant": Any<Object>,
  "code": "DIS-1",
  "created_at": Any<String>,
  "direction": Any<String>,
  "events": Any<Array>,
  "id": Any<String>,
  "jury": {
    "members": 0,
    "voted": 0,
  },
  "respondent": Any<Object>,
  "state": Any<String>,
  "title": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`put response on a dispute 1`] = `
{
  "claimant": Any<Object>,
  "code": "DIS-1",
  "created_at": Any<String>,
  "direction": Any<String>,
  "events": Any<Array>,
  "id": Any<String>,
  "jury": {
    "members": 0,
    "voted": 0,
  },
  "respondent": Any<Object>,
  "state": Any<String>,
  "title": Any<String>,
  "updated_at": Any<String>,
}
`;

exports[`withdraw from a dispute 1`] = `
{
  "claimant": Any<Object>,
  "code": "DIS-1",
  "created_at": Any<String>,
  "direction": Any<String>,
  "events": Any<Array>,
  "id": Any<String>,
  "jury": {
    "members": 0,
    "voted": 0,
  },
  "respondent": Any<Object>,
  "state": Any<String>,
  "title": Any<String>,
  "updated_at": Any<String>,
}
`;
